tests/rosetta/transpiler/C/2048.error
compile failed: exit status 1: /tmp/ctranspile4119998135/2048.mochi.c: In function ‘newBoard’:
/tmp/ctranspile4119998135/2048.mochi.c:79:13: warning: implicit declaration of function ‘list_append_intptr’; did you mean ‘list_append_int’? [-Wimplicit-function-declaration]
   79 |         b = list_append_intptr(b, &b_len, row);
      |             ^~~~~~~~~~~~~~~~~~
      |             list_append_int
/tmp/ctranspile4119998135/2048.mochi.c:79:11: warning: assignment to ‘int **’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
   79 |         b = list_append_intptr(b, &b_len, row);
      |           ^
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘spawnTile’:
/tmp/ctranspile4119998135/2048.mochi.c:93:63: error: expected expression before ‘{’ token
   93 |                 empty = list_append_intptr(empty, &empty_len, { x, y });
      |                                                               ^
/tmp/ctranspile4119998135/2048.mochi.c:103:16: warning: initialization of ‘int’ from ‘int *’ makes integer from pointer without a cast [-Wint-conversion]
  103 |     int cell = empty[idx];
      |                ^~~~~
/tmp/ctranspile4119998135/2048.mochi.c:108:11: error: subscripted value is neither array nor pointer nor vector
  108 |     b[cell[1]][cell[0]] = val;
      |           ^
/tmp/ctranspile4119998135/2048.mochi.c:108:20: error: subscripted value is neither array nor pointer nor vector
  108 |     b[cell[1]][cell[0]] = val;
      |                    ^
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘reverseRow’:
/tmp/ctranspile4119998135/2048.mochi.c:150:13: error: ‘r_len’ undeclared (first use in this function)
  150 |     int i = r_len - 1;
      |             ^~~~~
/tmp/ctranspile4119998135/2048.mochi.c:150:13: note: each undeclared identifier is reported only once for each function it appears in
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘slideLeft’:
/tmp/ctranspile4119998135/2048.mochi.c:162:16: error: ‘row_len’ undeclared (first use in this function)
  162 |     while (i < row_len) {
      |                ^~~~~~~
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘moveLeft’:
/tmp/ctranspile4119998135/2048.mochi.c:194:20: error: array subscript is not an integer
  194 |         int new = r["row"];
      |                    ^
/tmp/ctranspile4119998135/2048.mochi.c:195:26: error: array subscript is not an integer
  195 |         score = score + r["gain"];
      |                          ^
/tmp/ctranspile4119998135/2048.mochi.c:198:31: error: subscripted value is neither array nor pointer nor vector
  198 |             if (b[y][x] != new[x]) {
      |                               ^
/tmp/ctranspile4119998135/2048.mochi.c:201:26: error: subscripted value is neither array nor pointer nor vector
  201 |             b[y][x] = new[x];
      |                          ^
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘moveRight’:
/tmp/ctranspile4119998135/2048.mochi.c:216:16: error: array subscript is not an integer
  216 |         rev = r["row"];
      |                ^
/tmp/ctranspile4119998135/2048.mochi.c:217:26: error: array subscript is not an integer
  217 |         score = score + r["gain"];
      |                          ^
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘moveUp’:
/tmp/ctranspile4119998135/2048.mochi.c:258:20: error: array subscript is not an integer
  258 |         int new = r["row"];
      |                    ^
/tmp/ctranspile4119998135/2048.mochi.c:259:26: error: array subscript is not an integer
  259 |         score = score + r["gain"];
      |                          ^
/tmp/ctranspile4119998135/2048.mochi.c:262:31: error: subscripted value is neither array nor pointer nor vector
  262 |             if (b[y][x] != new[y]) {
      |                               ^
/tmp/ctranspile4119998135/2048.mochi.c:265:26: error: subscripted value is neither array nor pointer nor vector
  265 |             b[y][x] = new[y];
      |                          ^
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘moveDown’:
/tmp/ctranspile4119998135/2048.mochi.c:280:16: error: array subscript is not an integer
  280 |         col = r["row"];
      |                ^
/tmp/ctranspile4119998135/2048.mochi.c:281:26: error: array subscript is not an integer
  281 |         score = score + r["gain"];
      |                          ^
/tmp/ctranspile4119998135/2048.mochi.c: In function ‘main’:
/tmp/ctranspile4119998135/2048.mochi.c:336:14: error: array subscript is not an integer
  336 |     board = r["board"];
      |              ^
/tmp/ctranspile4119998135/2048.mochi.c:337:17: error: array subscript is not an integer
  337 |     int full = r["full"];
      |                 ^
/tmp/ctranspile4119998135/2048.mochi.c:339:14: error: array subscript is not an integer
  339 |     board = r["board"];
      |              ^
/tmp/ctranspile4119998135/2048.mochi.c:340:13: error: array subscript is not an integer
  340 |     full = r["full"];
      |             ^

